Look in the configured resources folder for templates

BUG:452706