libs/ui/KisTemplateTree.cpp
@@ -137,7 +137,9 @@ KisTemplateGroup *KisTemplateTree::find(const QString &name) const
 
 void KisTemplateTree::readGroups()
 {
+
     QStringList dirs = KoResourcePaths::findDirs("templates");
+    dirs << KoResourcePaths::saveLocation("templates");
 
     Q_FOREACH (const QString & dirName, dirs) {
         if (!dirName.contains("templates")) continue; // Hack around broken KoResourcePaths
